--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MiRecetasPorTu">
+        <activity android:name=".RecipesIngredientsFragment"></activity>
         <activity android:name=".RecipesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.mirecetasportu.MainActivity">
-            </meta-data>
+                android:value="com.example.mirecetasportu.MainActivity" />
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
